fix alignment of sidebar elements #8

--- a/src/website/styles/aside.scss
+++ b/src/website/styles/aside.scss
@@ -12,7 +12,7 @@
 .posts-list {
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.5rem;
   padding: 1rem 1.2rem;
   overflow-y: scroll;
   height: calc(100% - 2.8rem);
